2001-11-26  ??  <H.Zeller@acm.org>

	* jikes.spec: Mandrake compresses man-pages with bzip, not gzip.

2001-11-25  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h:
	* src/bytecode.cpp: Reformat to fit more in 80 columns.
	(semantic, control): Rename from this_semantic and this_control.
	(StripNops): Rename from UnParenthesize, and include check for
	widening casts.
	(EmitCast): Update to treat (short)byte as a nop.
	(LoadReference): Remove, as it was duplicating EmitExpression.
	(EmitNewArray): Update to use ANEWARRAY instead of MULTIANEWARRAY
	when only one dimension provided - patch 231.

2001-11-13  Brian Sullivan  <bsulliv@legacyj.com>

	* src/platform.cpp (class StringConstant): Code reformating to
	support IA-64 compilation: the aCC compiler does not recognize
	comma-chained class-member initializers.
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/control.h:
	* src/decl.cpp:
	* src/depend.cpp:
	* src/dump.cpp:
	* src/error.cpp:
	* src/expr.cpp:
	* src/getclass.cpp:
	* src/lookup.cpp:
	* src/option.cpp:
	* src/platform.h:
	* src/symbol.cpp:
	* src/system.cpp: Change all US__ and U8S__ prefixes to US_ and
	U8S_, for consistency - patch 230.

2001-11-13  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp:
	* src/error.h (PROTECTED_INTERFACE_METHOD_NOT_ACCESSIBLE): Add new
	error.
	* src/expr.cpp (MemberAccessCheck, ReportMethodNotFound): Update
	to account for the fact that interfaces do not inherit protected
	methods from Object, bug 1787, patch 229 update.

2001-11-12  Eric Blake  <ebb9@email.byu.edu>

	* src/double.cpp (IntValue, LongValue): Fix a bug in
	float to integral-type conversion, bug 2403.

2001-11-12  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (GenerateAssertVariableInitializer),
	(EmitAssertStatement): Fix regressions caused by patch 225.

2001-11-12  Eric Blake  <ebb9@email.byu.edu>

	* src/system.cpp (InitObjectInfo): Delete.
	* src/control.h (Object):
	* src/control.cpp (Object_getClassMethod): Rearrange evaluation