@@ -1,6 +1,15 @@
+2001-11-26  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/symbol.cpp (GetReadAccessMethod):
+	* src/expr.cpp (FindMethodMember): Update to patch 142; qualified
+	super methods require an accessor where fields did not, since the
+	invokespecial bytecode can only occur in subclasses - bug 2430,
+	patch 233.
+
 2001-11-26  ??  <H.Zeller@acm.org>
 
-	* jikes.spec: Mandrake compresses man-pages with bzip, not gzip.
+	* jikes.spec: Mandrake compresses man-pages with bzip, not gzip -
+	patch 232.
 
 2001-11-25  Eric Blake  <ebb9@email.byu.edu>
 
